--- a/database/config.json
+++ b/database/config.json
@@ -1,19 +1,41 @@
 {
-  "dataFile": "lesen.json",
   "fontScale": 1,
   "asideWidth": "40%",
-  "timer": {
-    "enabled": true,
-    "durationMinutes": 90
-  },
-  "scoreConfig": {
-    "passPercent": 60,
-    "parts": {
-      "teil-1": { "pointsPerQuestion": 5 },
-      "teil-2": { "pointsPerQuestion": 5 },
-      "teil-3": { "pointsPerQuestion": 2.5 },
-      "sprachbausteine-1": { "pointsPerQuestion": 1.5 },
-      "sprachbausteine-2": { "pointsPerQuestion": 1.5 }
+  "defaultModule": "lesen",
+  "modules": [
+    {
+      "name": "lesen",
+      "dataFile": "lesen.json",
+      "timer": {
+        "enabled": true,
+        "durationMinutes": 90
+      },
+      "scoreConfig": {
+        "passPercent": 60,
+        "parts": {
+          "teil-1": { "pointsPerQuestion": 5 },
+          "teil-2": { "pointsPerQuestion": 5 },
+          "teil-3": { "pointsPerQuestion": 2.5 },
+          "sprachbausteine-1": { "pointsPerQuestion": 1.5 },
+          "sprachbausteine-2": { "pointsPerQuestion": 1.5 }
+        }
+      }
+    },
+    {
+      "name": "horen",
+      "dataFile": "horen-codes.json",
+      "timer": {
+        "enabled": false,
+        "durationMinutes": 45
+      },
+      "scoreConfig": {
+        "passPercent": 60,
+        "parts": {
+          "teil-1": { "pointsPerQuestion": 1 },
+          "teil-2": { "pointsPerQuestion": 1 },
+          "teil-3": { "pointsPerQuestion": 1 }
+        }
+      }
     }
-  }
+  ]
 }
